@@ -2,12 +2,12 @@
 <extension version="2.5" method="upgrade" type="plugin" group="content">
   <name>plg_content_clm_show_ext</name>
   <author>CLM Team</author>
-  <creationDate>30.05.2019</creationDate>
+  <creationDate>01.10.2019</creationDate>
   <copyright>Copyright (C) 2018-2019 - CLM Team</copyright>
   <license>http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL</license>
   <authorEmail>kbaerthel@t-online.de</authorEmail>
   <authorUrl>chessleaguemanager.de</authorUrl>
-  <version>0.9.0</version>
+  <version>0.9.1</version>
   <description>PLG_CLM_SHOW_EXT_DESC</description>
 
   <files>
