@@ -14,9 +14,9 @@ PLG_CLM_SHOW_PARAM_SOURCE_DESC="Wählen Sie die URL von der die Daten eingelesen
 PLG_CLM_SHOW_ERR_FOPEN="allow_url_fopen muss true sein."
 PLG_CLM_SHOW_ERR_TAG="Die Anzahl der Parameter ist ungültig."
 PLG_CLM_SHOW_ERR_ID="Die ID muss eine Nummer > 0 sein."
-PLG_CLM_SHOW_ERR_SOURCE="Die Source-ID muss eine Nummer < 4 sein."
+PLG_CLM_SHOW_ERR_SOURCE="Die Source-ID muss eine Nummer > 0 und < 4 sein."
 PLG_CLM_SHOW_ERR_STYLE="Der Gestaltungsparameter muss zwischen 0 und 6 liegen. Standard ist 0."
-PLG_CLM_SHOW_ERR_VIEW="Der Viewparameter muss als Nummer 0 oder 3 angegeben werden."
+PLG_CLM_SHOW_ERR_VIEW="Der Viewparameter muss eine Nummer < 4 sein."
 PLG_CLM_SHOW_ERR_RUNDE="Die Runde muss als Nummer > 0 angegeben werden."
 PLG_CLM_SHOW_ERR_PAAR="Das Paar muss als Nummer > 0 angegeben werden."
 PLG_CLM_SHOW_ERR_DG="Der Durchgang muss als Nummer > 0 angegeben werden. Standard ist 1."
@@ -37,3 +37,15 @@ PLG_CLM_SHOW_ERR_EINZEL="Zur gewünschten Paarung liegen noch keine Ergebnisse v
 PLG_CLM_SHOW_ERR_TABLE="Die angegebene Turnier ID existiert nicht."
 PLG_CLM_SHOW_ERR_BAD="Etwas stimmt mit dem Input der Datenquelle nicht."
 PLG_CLM_SHOW_ERR_HIGHLIGHTING="In der Hervorhebungskonfiguration liegt ein Fehler, die richtige Form ist '<vereinsname1>?<bold>?<color>!<vereinsname2>?<bold>?<color>!<vereinsname3>?<bold>?<color>'."
+
+; Tabelle Paarungsliste
+ROUND="Runde"
+PAAR="Paar"
+TLN="Tln"
+HOME="Heim"
+DWZ="DWZ"
+RESULT="Ergebnis"
+GUEST="Gast"
+FIXTURE_DATE="Spieltermin"
+
+DATE_FORMAT_CLM_F="d. F Y"
