@@ -26,6 +26,7 @@ PLG_CLM_SHOW_EXT_DESC='<h2>Darstellung von Ligen von CLM-Seiten innerhalb von Ar
 <p>View:</p>
 <p>0 = Kreuztabelle (Standard)</p>
 <p>1 = Tabelle</p>
+<p>2 = Paarungsliste</p>
 <p>3 = Paarung</p>
 <p>Runde:</p>
 <p>Rundennummer - Pflicht bei View Paarung</p>
