@@ -40,3 +40,15 @@ PLG_CLM_SHOW_ERR_EINZEL="There are not results related to the entered fixture (f
 PLG_CLM_SHOW_ERR_TABLE="The tournament ID is wrong."
 PLG_CLM_SHOW_ERR_BAD="Something is wrong with the input from the data source."
 PLG_CLM_SHOW_ERR_HIGHLIGHTING="In the highlighted configuration is an error, the correct syntax is '<teamname1>?<bold>?<color>!<teamname2>?<bold>?<color>!<teamname3>?<bold>?<color>'."
+
+; Table Fixtures
+ROUND="Round"
+PAAR="Fixture"
+TLN="TNo"
+HOME="Home"
+DWZ="Grade"
+RESULT="Result"
+GUEST="Guest"
+FIXTURE_DATE="Date"
+
+DATE_FORMAT_CLM_F="dS F Y"
