@@ -26,6 +26,7 @@ PLG_CLM_SHOW_EXT_DESC="<h2>Import of CLM Leagues</h2>
 <p>View:</p>
 <p>0 = cross-table (default)</p>
 <p>1 = Table</p>
+<p>2 = Pairing List</p>
 <p>3 = Fixture</p>
 <p>Round:</p>
 <p>Number of Round - obligatory in 'View Fixture' (if you don't know this id, ask your webmaster)</p>
@@ -36,5 +37,6 @@ PLG_CLM_SHOW_EXT_DESC="<h2>Import of CLM Leagues</h2>
 <p>Examples: 
 <p>- [showCLMData:2:78] displays the cross table of the league with the ID=78 from the Joomla-website, which is entered as data source 2. The parameter 'Style' and 'View' are using the default settings.</p>
 <p>- [showCLMData:1:51:0:3:2:4] shows the fixture 4 from round 2 from the league with the ID=51 from the Joomla-website, which is entered as data source 1.</p>
+
 <p><a target="_blank" href="https://chessleaguemanager.de">CLM Project Homepage</a></p>
 <p>&copy; CLM Team </p>"
