@@ -11,8 +11,12 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
-- - - - - 0.8.0 - [20-05-2019] - - - - - - - - - - - - - - - - - - - -
-+ Startpunkt
+- - - - - 0.9.1 - [06-10-2019] - - - - - - - - - - - - - - - - - - - -
++ View Paarungsliste
+
 - - - - - 0.9.0 - [28-05-2019] - - - - - - - - - - - - - - - - - - - -
 + englische Sprachdateien
+
+- - - - - 0.8.0 - [20-05-2019] - - - - - - - - - - - - - - - - - - - -
++ Startpunkt
 
